Set z-index for the correct element

--- a/static/themes/RLP/theme.css
+++ b/static/themes/RLP/theme.css
@@ -1767,115 +1767,118 @@ body.rtl .sub-nav.about-menu {
 
 /* line 38, ../../default/scss/theme/_menus.scss */
 .main-menu {
-  z-index: 1000;
   font-size: 0.8125rem;
 }
-/* line 41, ../../default/scss/theme/_menus.scss */
+/* line 40, ../../default/scss/theme/_menus.scss */
 .main-menu .title-bar {
   background: #871D33;
   margin: 0.5rem 0 0;
 }
-/* line 44, ../../default/scss/theme/_menus.scss */
+/* line 43, ../../default/scss/theme/_menus.scss */
 .main-menu .title-bar .title-bar-title {
   margin: 0 0.5rem;
 }
-/* line 48, ../../default/scss/theme/_menus.scss */
+/* line 47, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar {
   height: 2.25rem;
 }
-/* line 52, ../../default/scss/theme/_menus.scss */
+/* line 48, ../../default/scss/theme/_menus.scss */
+.main-menu .top-bar .top-bar-left, .main-menu .top-bar .top-bar-right {
+  z-index: 99;
+}
+/* line 54, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li.is-dropdown-submenu-parent > a::after, .main-menu .top-bar .drilldown.menu li.is-dropdown-submenu-parent > a::after {
   border-color: rgba(255, 255, 255, 0.4) transparent transparent;
 }
-/* line 55, ../../default/scss/theme/_menus.scss */
+/* line 57, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li.is-drilldown-submenu-parent > a::after, .main-menu .top-bar .drilldown.menu li.is-drilldown-submenu-parent > a::after {
   border-color: transparent transparent transparent rgba(255, 255, 255, 0.4);
 }
-/* line 58, ../../default/scss/theme/_menus.scss */
+/* line 60, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li .js-drilldown-back > a::before, .main-menu .top-bar .drilldown.menu li .js-drilldown-back > a::before {
   border-color: transparent rgba(255, 255, 255, 0.4) transparent transparent;
 }
-/* line 61, ../../default/scss/theme/_menus.scss */
+/* line 63, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li a, .main-menu .top-bar .drilldown.menu li a {
   background-color: #871D33;
   color: #fefefe;
 }
-/* line 64, ../../default/scss/theme/_menus.scss */
+/* line 66, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li a:hover, .main-menu .top-bar .drilldown.menu li a:hover {
   background-color: #7a1a2e;
   color: #fefefe;
 }
-/* line 69, ../../default/scss/theme/_menus.scss */
+/* line 71, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li.active > a, .main-menu .top-bar .drilldown.menu li.active > a {
   background-color: #444;
   color: #fefefe;
 }
-/* line 72, ../../default/scss/theme/_menus.scss */
+/* line 74, ../../default/scss/theme/_menus.scss */
 .main-menu .top-bar .dropdown.menu li.active > a:hover, .main-menu .top-bar .drilldown.menu li.active > a:hover {
   background-color: #3d3d3d;
   color: #e5e5e5;
 }
 
-/* line 85, ../../default/scss/theme/_menus.scss */
+/* line 87, ../../default/scss/theme/_menus.scss */
 .side-bar {
   background: none repeat scroll 0 0 #f7f7f7;
   margin-top: 10px;
   padding: 0.25rem 0;
 }
 
-/* line 92, ../../default/scss/theme/_menus.scss */
+/* line 94, ../../default/scss/theme/_menus.scss */
 .options-menu ul {
   margin-left: 0;
 }
-/* line 94, ../../default/scss/theme/_menus.scss */
+/* line 96, ../../default/scss/theme/_menus.scss */
 .options-menu ul li > a {
   padding-left: 1.25rem;
 }
-/* line 99, ../../default/scss/theme/_menus.scss */
+/* line 101, ../../default/scss/theme/_menus.scss */
 .options-menu > li {
   padding: 0.3rem 0;
 }
-/* line 101, ../../default/scss/theme/_menus.scss */
+/* line 103, ../../default/scss/theme/_menus.scss */
 .options-menu > li.active-section {
   background-color: #f2f2f2;
 }
-/* line 106, ../../default/scss/theme/_menus.scss */
+/* line 108, ../../default/scss/theme/_menus.scss */
 .options-menu li {
   font-size: 0.875rem;
   font-weight: normal;
   margin: 0;
 }
-/* line 110, ../../default/scss/theme/_menus.scss */
+/* line 112, ../../default/scss/theme/_menus.scss */
 .options-menu li a {
   color: #666;
   padding: 0.325rem 0.5rem;
 }
-/* line 113, ../../default/scss/theme/_menus.scss */
+/* line 115, ../../default/scss/theme/_menus.scss */
 .options-menu li a:hover {
   color: #b22643;
   background-color: rgba(0, 0, 0, 0.05);
 }
-/* line 120, ../../default/scss/theme/_menus.scss */
+/* line 122, ../../default/scss/theme/_menus.scss */
 .options-menu li.heading > a {
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 124, ../../default/scss/theme/_menus.scss */
+/* line 126, ../../default/scss/theme/_menus.scss */
 .options-menu li.heading:not(:first-child) {
   border-top: 1px solid #eaeaea;
 }
-/* line 130, ../../default/scss/theme/_menus.scss */
+/* line 132, ../../default/scss/theme/_menus.scss */
 .options-menu li.is-active > a:first-child:not(.button) {
   font-weight: bold;
   color: #444;
   background-color: #e0e1e2;
 }
-/* line 134, ../../default/scss/theme/_menus.scss */
+/* line 136, ../../default/scss/theme/_menus.scss */
 .options-menu li.is-active > a:first-child:not(.button):hover {
   color: #b22643;
   background-color: #e2e3e3;
 }
-/* line 142, ../../default/scss/theme/_menus.scss */
+/* line 144, ../../default/scss/theme/_menus.scss */
 .options-menu .num-pending {
   margin: 0 0.4rem;
   font-weight: normal;
@@ -1887,55 +1890,55 @@ body.rtl .sub-nav.about-menu {
   color: #712e05;
 }
 
-/* line 154, ../../default/scss/theme/_menus.scss */
+/* line 156, ../../default/scss/theme/_menus.scss */
 #menu-options-toggle {
   margin-top: 0.5rem;
   width: 100%;
 }
 
-/* line 162, ../../default/scss/theme/_menus.scss */
+/* line 164, ../../default/scss/theme/_menus.scss */
 .sub-nav {
   line-height: normal;
 }
-/* line 164, ../../default/scss/theme/_menus.scss */
+/* line 166, ../../default/scss/theme/_menus.scss */
 .sub-nav li {
   font-size: 0.75rem;
 }
-/* line 166, ../../default/scss/theme/_menus.scss */
+/* line 168, ../../default/scss/theme/_menus.scss */
 .sub-nav li:before {
   color: #999;
   content: "|";
   margin: 0 0.375rem;
 }
-/* line 171, ../../default/scss/theme/_menus.scss */
+/* line 173, ../../default/scss/theme/_menus.scss */
 .sub-nav li:first-child:before {
   content: "";
   margin: 0;
 }
-/* line 175, ../../default/scss/theme/_menus.scss */
+/* line 177, ../../default/scss/theme/_menus.scss */
 .sub-nav li a {
   color: #999;
   text-decoration: none;
   display: inline-block;
   padding: 0 0.375rem;
 }
-/* line 180, ../../default/scss/theme/_menus.scss */
+/* line 182, ../../default/scss/theme/_menus.scss */
 .sub-nav li a:hover {
   color: #666;
 }
-/* line 185, ../../default/scss/theme/_menus.scss */
+/* line 187, ../../default/scss/theme/_menus.scss */
 .sub-nav.personal-menu {
   float: right;
   clear: right;
   padding-top: 0;
   margin-bottom: 0.125rem;
 }
-/* line 188, ../../default/scss/theme/_menus.scss */
+/* line 190, ../../default/scss/theme/_menus.scss */
 [dir=rtl] .sub-nav.personal-menu {
   float: left;
   clear: left;
 }
-/* line 194, ../../default/scss/theme/_menus.scss */
+/* line 196, ../../default/scss/theme/_menus.scss */
 .sub-nav.personal-menu li a {
   padding: 0 0.375rem;
 }
